--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+        "build-local": "vite build",
         "dev": "vite"
     },
     "devDependencies": {
