--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "heroku/heroku-buildpack-php": "*",
-        "laravel/framework": "^12.0",
+        "heroku/heroku-buildpack-php": "^273.0",
+        "laravel/framework": "^11.0",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
