--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "build": "vite build",
         "build-local": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "postinstall": "npm run build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
